--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="JOSKA COUNTDOWN" />
+    <meta property="og:description" content="Countdown to JOSKA event." />
+    <meta property="og:image" content="https://yourimageurl.com/image.jpg" />
+    <meta property="og:url" content="https://muigaijose.github.io/JOSKA_COUNTDOWN/" />
     <title>Countdown Timer</title>
     <style>
         body {
@@ -36,10 +40,16 @@
     </style>
 </head>
 <body>
-
 <div class="countdown">
+    <h1>Welcome to JOSKA Countdown!</h1>
     <div class="time" id="days">0</div>
     <div class="label">Days To Go</div>
+
+        <!-- Add your image here -->
+    <img src="image.jpg" alt="JOSKA Countdown" width="500" height="300">
+
+    <p>Counting down to the GLORIOUS JOSKA FUNDDRIVE
+        </p>
 </div>
 
 <script>
