--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="JOSKA COUNTDOWN" />
     <meta property="og:description" content="Countdown to JOSKA event." />
-    <meta property="og:image" content="https://yourimageurl.com/image.jpg" />
+    <meta property="og:image" content="image.jpg" />
     <meta property="og:url" content="https://muigaijose.github.io/JOSKA_COUNTDOWN/" />
     <title>Countdown Timer</title>
     <style>
@@ -31,6 +31,7 @@
         .time {
             font-size: 48px;
             color: #333;
+            background-image: -moz-element();
         }
 
         .label {
@@ -41,17 +42,13 @@
 </head>
 <body>
 <div class="countdown">
-    <h1>Welcome to JOSKA Countdown!</h1>
+    <h1>Welcome to JOSKA GLORIOUS FUND DRIVE!</h1>
     <div class="time" id="days">0</div>
-    <div class="label">Days To Go</div>
-
-        <!-- Add your image here -->
-    <img src="image.jpg" alt="JOSKA Countdown" width="500" height="300">
-
+    <div class="label"><H1>DAYS TO GO</H1></div>
+    <img src="image.jpg" alt="JOSKA Countdown" width="400" height="300">
     <p>Counting down to the GLORIOUS JOSKA FUNDDRIVE
         </p>
 </div>
-
 <script>
     // Set the date for the countdown
     const targetDate = new Date("September 1, 2024").getTime();
