--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         const seconds = Math.floor((distance % (1000 * 60)) / 1000);
 
         // Display the result
-        document.getElementById("days").innerHTML = `${days} days ${hours} hours ${minutes} minutes ${seconds} seconds`;
+        document.getElementById("days").innerHTML = `${days} days ${hours} HRS ${minutes} MIN ${seconds} SECs`;
 
 
         // If the countdown is finished
