--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            font-size-adjust: inherit;
+
         }
 
         .time-container {
-            display: flex;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -44,6 +45,7 @@
         }  
         .time {
             font-weight: bold;
+            font-size: 25px;
             margin: 0 10px; 
         }
 
